Fixed extra padding on mobile

--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Outfit', sans-serif;
   background-color: #0C1A2D;
@@ -8,10 +13,6 @@ p, .media-content p {
   font-size: 18px;
   color: #697E9C;
   letter-spacing: 1px;
-}
-
-.columns:last-child {
-  margin-bottom: 0;
 }
 
 .card {
@@ -42,4 +43,10 @@ a.title:hover, .author:hover {
 
 .author {
   color: #fff;
+}
+
+@media screen and (min-width: 1216px){
+  .column.is-offset-4-widescreen {
+    margin-left: 37.5%;
+  }
 }
